# --whd

./: .gitignore  README.md  app.js  dex_health_dashboard_five_concepts.html  index.html  market_weather_terminal_five_layouts.html  package.json  pyproject.toml  scanner_feed_bloomberg_three_layouts.html  server.mjs  styles.css
backend_py/: README.md  __init__.py  backtest_strategy_router.py  backtest_structure.py  build_deviation_rules.py  build_feature_factory.py  build_market_weather_router.py  build_summary.py  calibrate_router.py  clean_data.py  compare_clean_data.py  compare_deviation_rules.py  compare_feature_factory.py  compare_market_weather_router.py  compare_summary.py  data_io.py  discord_bot.py  download_data.py  download_macro_data.py  entry_plan.py  fib_ladder.py  fractal.py  freeze_golden.py  gate1_backtest.py  lead_lag.py  live_refresh.py  main.py  radar_brain.py  reports_reader.py  run_data_pipeline.py  run_full_pipeline.py  run_parity_check.py  run_research_parity.py  run_router_parity.py  scanner_service.py  smoke_test.py  structure.py  telegram_bot.py  ws_monitor.py
backtest/: clean.mjs  config.mjs  decision-journal.mjs  decision-tree-suite.mjs  decision-tree-validation.mjs  decision-tree.mjs  deviation-rules.mjs  deviation-study.mjs  feature-factory.mjs  indicator-backtest.mjs  indicators.mjs  io.mjs  macro-data.mjs  market-state.mjs  market-weather-router.mjs  okx.mjs  position-state.mjs  router-calibrator.mjs  som.mjs  state-features.mjs  strategy-router-backtest.mjs  strategy-router.mjs  volatility-state.mjs
deploy/: Caddyfile  README.md  (+6 more)
(+2792 files in other folders)
