[project]
name = "quant-monitor-terminal"
version = "0.1.0"
description = "Market weather research terminal with a Python API bridge."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
# Bot adapters (optional): conversational interface over the radar.
# Pluggable LLM core via BOT_LLM_PROVIDER: claude (anthropic) | deepseek/openai (openai-compatible).
# Telegram uses stdlib only; Discord needs discord.py.
bot = [
  "anthropic>=0.40",
  "openai>=1.40",
  "discord.py>=2.4",
]

[tool.uv]
package = false
